# mcp-hwc

./: .env.example  AGENTS.md  README.md  opencode.json  pyproject.toml
docs/superpowers/plans/: 2026-05-22-hwc-pricing.md
docs/superpowers/specs/: 2026-05-22-hwc-pricing-design.md
mcp_hwc/: __main__.py  cli_service.py  compute.py  config.py  defaults.py  local_artifacts.py  lts_workflow.py  obs_endpoints.py  obs_service.py  polling.py  sdk_service.py  server.py  ssh_service.py  swr_workflow.py
mcp_hwc/cloud_services/: cli_service.py  compute.py  obs_endpoints.py  obs_service.py  ssh_service.py
mcp_hwc/core/: config.py  defaults.py  errors.py  regions.py  sdk_service.py  service_factory.py  tool_manager.py
mcp_hwc/pricing/: __init__.py  bss_pricing.py  catalog.py  models.py  persistence.py  tools.py  web_pricing.py
mcp_hwc/routers/: k8s.py  obs.py  pricing.py
mcp_hwc/schemas/: operations.py
mcp_hwc/utils/: local_artifacts.py  polling.py
mcp_hwc/workflows/: ecs.py  lts_workflow.py  sfs.py  swr_workflow.py
tests/: test_cli_service.py  test_config.py  test_defaults.py  test_errors.py  test_obs_service.py  test_pricing_bss.py  test_pricing_catalog.py  test_pricing_models.py  test_pricing_persistence.py  test_pricing_tools.py  test_pricing_web.py  test_regions.py  test_sdk_service.py  test_server.py  test_ssh_service.py
tests/routers/: test_registration.py
tests/schemas/: test_operations.py
