[project]
name = "mcp-hwc"
version = "0.1.0"
description = "MCP server for managing Huawei Cloud services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esdk-obs-python",
    "huaweicloudsdkaad>=3.1.192",
    "huaweicloudsdkantiddos>=3.1.192",
    "huaweicloudsdkaom>=3.1.192",
    "huaweicloudsdkapig>=3.1.192",
    "huaweicloudsdkapm>=3.1.192",
    "huaweicloudsdkas>=3.1.192",
    "huaweicloudsdkasm>=3.1.192",
    "huaweicloudsdkcae>=3.1.192",
    "huaweicloudsdkcbh>=3.1.192",
    "huaweicloudsdkcbr>=3.1.192",
    "huaweicloudsdkcc>=3.1.192",
    "huaweicloudsdkcce>=3.1.192",
    "huaweicloudsdkcdn>=3.1.192",
    "huaweicloudsdkces>=3.1.192",
    "huaweicloudsdkcfw>=3.1.192",
    "huaweicloudsdkcgs>=3.1.165",
    "huaweicloudsdkcloudtable>=3.1.192",
    "huaweicloudsdkcodeartsartifact>=3.1.192",
    "huaweicloudsdkcodeartsbuild>=3.1.192",
    "huaweicloudsdkcodeartscheck>=3.1.192",
    "huaweicloudsdkcodeartsdeploy>=3.1.192",
    "huaweicloudsdkcodeartspipeline>=3.1.192",
    "huaweicloudsdkcodeartsrepo>=3.1.192",
    "huaweicloudsdkcodehub>=3.1.173",
    "huaweicloudsdkconfig>=3.1.192",
    "huaweicloudsdkcore>=3.1.192",
    "huaweicloudsdkcss>=3.1.192",
    "huaweicloudsdkcts>=3.1.192",
    "huaweicloudsdkdas>=3.1.192",
    "huaweicloudsdkdc>=3.1.192",
    "huaweicloudsdkdcs>=3.1.192",
    "huaweicloudsdkddm>=3.1.192",
    "huaweicloudsdkdds>=3.1.192",
    "huaweicloudsdkdms>=3.1.42",
    "huaweicloudsdkdns>=3.1.192",
    "huaweicloudsdkdrs>=3.1.192",
    "huaweicloudsdkdws>=3.1.192",
    "huaweicloudsdkecs>=3.1.192",
    "huaweicloudsdkeip>=3.1.192",
    "huaweicloudsdkelb>=3.1.192",
    "huaweicloudsdker>=3.1.192",
    "huaweicloudsdkesw>=3.1.192",
    "huaweicloudsdkevs>=3.1.192",
    "huaweicloudsdkfunctiongraph>=3.1.192",
    "huaweicloudsdkga>=3.1.192",
    "huaweicloudsdkgaussdb>=3.1.192",
    "huaweicloudsdkgaussdbfornosql>=3.1.192",
    "huaweicloudsdkgaussdbforopengauss>=3.1.192",
    "huaweicloudsdkgeip>=3.1.192",
    "huaweicloudsdkiam>=3.1.192",
    "huaweicloudsdkims>=3.1.192",
    "huaweicloudsdkkafka>=3.1.192",
    "huaweicloudsdkkms>=3.1.192",
    "huaweicloudsdklts>=3.1.192",
    "huaweicloudsdkmastudio>=3.1.192",
    "huaweicloudsdkmetastudio>=3.1.192",
    "huaweicloudsdkmrs>=3.1.192",
    "huaweicloudsdknat>=3.1.192",
    "huaweicloudsdkocr>=3.1.192",
    "huaweicloudsdkorganizations>=3.1.192",
    "huaweicloudsdkrabbitmq>=3.1.192",
    "huaweicloudsdkrds>=3.1.192",
    "huaweicloudsdkrocketmq>=3.1.192",
    "huaweicloudsdksecmaster>=3.1.192",
    "huaweicloudsdksfsturbo>=3.1.192",
    "huaweicloudsdksmn>=3.1.192",
    "huaweicloudsdkswr>=3.1.192",
    "huaweicloudsdkucs>=3.1.192",
    "huaweicloudsdkugo>=3.1.192",
    "huaweicloudsdkvpc>=3.1.192",
    "huaweicloudsdkvpcep>=3.1.192",
    "huaweicloudsdkvpn>=3.1.192",
    "huaweicloudsdkwaf>=3.1.192",
    "huaweicloudsdkworkspace>=3.1.192",
    "huaweicloudsdkworkspaceapp>=3.1.192",
    "mcp[cli]",
    "paramiko>=3.5.1",
    "python-dotenv",
]

[project.scripts]
mcp-hwc = "mcp_hwc.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_hwc"]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
